--- a/css/RESET.css
+++ b/css/RESET.css
@@ -15,6 +15,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 ol, ul {
   list-style: none;
+  padding: 0px
 }
 
 blockquote, q {
