hold on live domain.

--- a/css/Master-Styles.css
+++ b/css/Master-Styles.css
@@ -695,3 +695,9 @@ input[type=checkbox]:checked ~ #menu{
     }
     
 }
+
+.bigName {
+    font-size: 6em;
+    text-align: center;
+    margin: 50%;
+}
