--- a/css/Master-Styles.css
+++ b/css/Master-Styles.css
@@ -310,25 +310,31 @@ a {
 #Blog-feed {
     padding-left: .312em;
     padding-right: .312em;
+    padding-bottom: .812em;
 }
 
     .feed-article {
         padding-top: .812em;
+        width: 100%;
     }
 
-    .feed-article div {
-        height: 150px;
+    .feedImg {
+        height:150px;
         width: 100%;
         background-color: blue;
     }
+
+    .feedCopy {
+        width: 100%
+    }
     
-    .feed-article h4 {
+    .feedCopy h4 {
         padding-top: .712em;
         font-size: 1.3em;
         font-weight: 100;
     }
 
-    .feed-article h3 {
+    .feedCopy h3 {
         font-size: 1.6em;
         padding-top: .3em;
         padding-bottom: .2em;
@@ -367,11 +373,40 @@ a {
     }
 
     .back-btn {
-        font-size: 2em;
-        margin-bottom: 1.2em;
-        padding-left: .6em;
+        font-size: 3em;
+        margin-bottom: .2em;
     }
 
+#Work {
+    padding-left: .312em;
+    padding-right: .312em;
+}
+
+    #Work li {
+        display: inline-block;
+        width: 100%;
+    }
+
+    .work-items img {
+        height: 150px;
+        width: 100%;
+        background-color: red;
+    }
+
+    .work-items h4 {
+        font-size: 1.35em;
+        padding-bottom: .4em;
+    }
+
+    .work-items p {
+        font-size: .9em;
+        padding-top: .3em;
+    }
+
+    .work-items p a {
+        color: #9e9e9e;
+        padding-left: .6em;
+    }
     
 /* secondary styles
 ----------------------------------------*/
@@ -515,6 +550,7 @@ input[type=checkbox]:checked ~ #menu{
         height: 340px;
         width: 340px;
     }
+    
 
 }
 
@@ -558,6 +594,10 @@ input[type=checkbox]:checked ~ #menu{
     .circle-2 {
         height: 420px;
         width: 420px;
+    }
+    
+    #Work li {
+        width: 49%;
     }
     
 }
@@ -627,6 +667,15 @@ input[type=checkbox]:checked ~ #menu{
         width: 50%;
     }
     
+    .feedImg {
+        width: 35%;
+        float: right;
+    }
+    
+    .feedCopy {
+        width: 65%;
+        float: left;
+    }
     
 }
 
@@ -686,6 +735,21 @@ input[type=checkbox]:checked ~ #menu{
     
     .shop-item-right {
         margin-left: -3em;
+    }
+    
+    #Sub-Nav {
+        padding-left: .812em;
+        padding-right: 1em;
+    }
+    
+    #Blog-feed {
+        padding-left: .812em;
+        padding-right: 1em;
+    }
+    
+    #Work {
+        padding-left: .812em;
+        padding-right: 1em;
     }
     
 }
