--- a/css/Master-Styles.css
+++ b/css/Master-Styles.css
@@ -24,25 +24,20 @@ a {
 #contentWrapper {
     width: 100%;
 }
-
 #contentInner {
     width: 95%;
     margin: auto auto;
 }
-
 #indexWrapper{
     width: 100%;
+    float: left;
 }
-
-
 #secondary {
 
 }
-
 #footer {
 
 }
-
 
 
 /* header
@@ -88,59 +83,54 @@ a {
     border-bottom: .3125em solid black;
     height: auto;
     width: 100%;
-}
-
-.NavMenu {
-    border-top: .3125em solid black;
-    border-bottom: .3125em solid black;
-    height: auto;
-    width: 100%;
-}
-
-.nav-links ul {
-    display: none;
-	list-style-type:none;
-	margin:0;
-	padding:0;
-    font-size: 1.25em;
-    font-weight: 100;
-}
-
-.nav-links li ul {
-	display: none;
-}
-
-.nav-links li ul li {
-	display: block;
-	float: none;
-}
-
-.nav-links li ul li a {
-	width: auto;
-	min-width: 6.25em;
-	padding: 0em 1.25em;
-}
-
-.nav-links li a {
-	display:block;
-	min-width: 8.75em;
-	height: 3.125em;
-	text-align: center;
-	line-height: 3.125em;
-	color: black;
-	text-decoration: none;
-}
-
-.nav-links li:hover a {
-    color: white;
-	background: black;
-}
-
-.show-menu{
-    font-size: 1.25em;
-    font-weight: 100;
-}
-
+    }
+    .NavMenu {
+        border-top: .3125em solid black;
+        border-bottom: .3125em solid black;
+        height: auto;
+        width: 100%;
+    }
+    .nav-links ul {
+        display: none;
+        list-style-type:none;
+        margin:0;
+        padding:0;
+        font-size: 1.25em;
+        font-weight: 100;
+    }
+    .nav-links li ul {
+        display: none;
+    }
+    .nav-links li ul li {
+        display: block;
+        float: none;
+    }
+    .nav-links li ul li a {
+        width: auto;
+        min-width: 6.25em;
+        padding: 0em 1.25em;
+    }
+    .nav-links li a {
+        display:block;
+        min-width: 8.75em;
+        height: 3.125em;
+        text-align: center;
+        line-height: 3.125em;
+        color: black;
+        text-decoration: none;
+    }
+    .nav-links li:hover a {
+        color: white;
+        background: black;
+    }
+    .active {
+        color: white !important;
+        background: black !important;
+    }
+    .show-menu{
+        font-size: 1.25em;
+        font-weight: 100;
+    }
 #Sub-Nav {
     display: none;
     padding-left: .312em;
@@ -317,13 +307,6 @@ a {
         float: right;
     }
 
-    .shop-circle {
-        height: 310px;
-        width: 310px;
-        margin: auto;
-        position: relative;
-    }
-
 .Shop-Item {
     width: 100%;
     overflow: hidden;
@@ -361,9 +344,6 @@ a {
         margin-bottom: .2em;
     }
 
-
-
-
 #wordDay {
     padding-right: .312em;
     padding-left: .312em;
@@ -371,26 +351,23 @@ a {
     width: 90%;
     margin-left: 11%;
 }
-
     .word {
         font-size: 1.3em;
     }
-
     .word span {
         font-size: .8em;
         font-weight: 400;
     }
-
     .wordDef {
         
     }
-
 
 .blog-feed {
     padding-bottom: .812em;
 }
 
     .feed-article {
+        padding-top: 1em;
     }
 
     .feedImg {
@@ -632,10 +609,6 @@ input[type=checkbox]:checked ~ #menu{
         width: 50%;
         margin-top: 6.8em;
     }
-    .shop-circle{
-        height: 15em;
-        width: 15em;
-    }
 }
 
 @media screen and (min-width : 40em) {
@@ -702,12 +675,6 @@ input[type=checkbox]:checked ~ #menu{
         margin-top: 2.5em;
     }
 }
-@media screen and (min-width : 47.1875em){
-    .shop-circle{
-        height: 17em;
-        width: 17em;
-    }
-}
 @media screen and (min-width : 51em) {
     #Sub-Nav ul {
         width: 75%;
@@ -719,10 +686,6 @@ input[type=checkbox]:checked ~ #menu{
         width: 500px;
         float: right;
         margin: auto;
-    }
-    .shop-circle{
-        width: 20em;
-        height: 20em;
     }
 }
 
@@ -766,7 +729,6 @@ input[type=checkbox]:checked ~ #menu{
 @media screen and (min-width : 63.75em) {
     #indexWrapper{
         width: 65%;
-        float: left;
     }
     .circle {
         height: 330px;
