--- a/css/Master-Styles.css
+++ b/css/Master-Styles.css
@@ -578,9 +578,15 @@ input[type=checkbox]:checked ~ #menu{
         width: 62%;
         float: right;
     }
-    .shopFeedOdd{
-        margin-top: 2.5em;
+    .shopFeed li:nth-child(even){
+        margin-top: 6.5em;
         float: right;
+    }
+    .shopFeed li:nth-child(3n){
+        margin: -6em 0em 0em 3em;
+    }
+    .shopFeed li:nth-child(4n){
+        margin-top: -7em;
     }
 }
 @media screen and (min-width : 51em) {
